# JICA

./: .gitignore  pyproject.toml
data/: energy_calibration_jica.txt  ions.npz  jica_datarequest_nr0.npz  jica_datarequest_nr1.npz  jica_datarequest_nr10.npz  jica_datarequest_nr11.npz  jica_datarequest_nr16.npz  jica_datarequest_nr17.npz  jica_datarequest_nr1_and_nr2_interp.npz  jica_datarequest_nr2.npz  jica_datarequest_nr20.npz  jica_datarequest_nr21.npz  jica_datarequest_nr2_and_nr1.npz  jica_datarequest_nr4.npz  jica_datarequest_nr6.npz  jica_datarequest_nr7.npz  jica_datarequest_nr8.npz  jica_datarequest_nr9.npz  mansikamodel_major_species_2016_v0.3.xlsx  molecules.txt  neg_en_table_adjusted.npz  pos_en_table_adjusted.npz
lscripts/: analyze_2s.ipynb  analyze_neg_E.ipynb  analyze_sec146.ipynb  data_budget_estimate.ipynb  molecule_masses.py  test_energy_offset_calibration.ipynb  test_model.ipynb  test_raw.ipynb
lscripts/fun/: my_functions.py
rscripts/: caldata.py  concatinate_id79.py  fit_alt_time.py  id50.py  id68.py  id73.py  id79.py  match_id79_id68_tres.py
rscripts/260115/: finding_species.py  (+1 more)
uscripts/: energy_calibration_jica.txt  energy_current_spectrum.py  energy_time_spectrum.py  energy_time_spectrum2.py  gaussian_fit_to_negative.py  gaussian_fit_to_positive.py  identify_energy_offset.py  monte_carlo_error_propagation.py  plot_altitudes.py  plot_data_request4.py  plot_data_request6_8.py  plot_data_request9_11.py  plot_data_requests16_17.py  plot_data_requests20_21.py  plot_ionospheric_profiles.py  statistical_test.py  student_t_test.py  test.py
(+11 files in other folders)
