[project]
name = "jica"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Richard Johansson", email = "richard.johansson@irf.se" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "plotly>=6.5.1",
    "scipy>=1.17.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
